更合理的代理选择